kubernetes/ingress-config.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /api
            backend:
              serviceName: api
              servicePort: 8080
          - path: /login
            backend:
              serviceName: api
              servicePort: 8080
          - path: /
            backend:
              serviceName: nginx
              servicePort: 8080
